syntax="proto3";


package businessServiceOrder;
option go_package=".;order";

message BusinessServiceOrder {
    int64 businessServiceOrderID = 1;
    int64 clientID = 2;
    int64 businessServiceID = 3;
    string businessServiceName = 4;
    string startAt = 5;
    string endAt = 6;
    string createdAt = 7;
    bool prePaid = 8;
    string clientFirstName = 9;
    string clientPhoneNumber = 10;
    string clientPhoneNumberPrefix = 11;
    string clientCommentary = 12;
}

message GetBusinessServiceOrderRequest {
    int64 businessServiceOrderID = 1;
}

message GetBusinessServiceOrderResponse {
    BusinessServiceOrder businessServiceOrder = 1;
}

message GetBusinessServiceOrdersRequest {
    int64 businessServiceID = 1;
}

message GetBusinessServiceOrdersResponse {
    repeated BusinessServiceOrder businessServicesOrders = 1;
}

message GetBusinessServiceOrderByDateRequest {
    int64 businessServiceID = 1;
    string date = 2;
}

message GetBusinessServiceOrderByDateResponse {
    repeated BusinessServiceOrder businessServicesOrders = 1;
}

message CreateBusinessServiceOrderRequest {
    int64 clientID = 1;
    int64 businessServiceID = 2;
    string startAt = 3;
    bool prePaid = 4;
    string clientFirstName = 5;
    string clientPhoneNumber = 6;
    string clientPhoneNumberPrefix = 7;
    string clientCommentary = 8;
}

message CreateBusinessServiceOrderResponse {
    BusinessServiceOrder businessServiceOrder = 1;
}

message GetCompanyServiceInfoByWeekDayRequest {
    int64 businessServiceID = 1;
    int64 dayOfWeek = 2;
}

message GetCompanyServiceInfoByWeekDayResponse {
    int64 companyServiceID = 1;
    string companyServiceName = 2;
    int64 companyServiceDuration = 3;
    int64 companyServicePrice = 4;
    int64 dayOfWeek = 5;
    string openTime = 6;
    string closeTime = 7;
}

message GetCompanyAvailableHoursByDateRequest {
     int64 businessServiceID = 1;
     string date = 2;
}

message GetCompanyAvailableHoursByDateResponse {
    repeated string availableHour = 1;
}

message UpdateBusinessServiceOrderRequest {
    int64 orderID = 1;
    int64 businessServiceID = 2;
    string startAt = 3;
    bool prePaid = 4;
    string clientFirstName = 5;
    string clientPhoneNumber = 6;
    string clientPhoneNumberPrefix = 7;
    string clientCommentary = 8;
}

message UpdateBusinessServiceOrderResponse {
    BusinessServiceOrder businessServiceOrder = 1;
}

message DeleteBusinessServiceOrderRequest {
    int64 orderID = 1;
}

message DeleteBusinessServiceOrderResponse {
    BusinessServiceOrder businessServiceOrder = 1;
}

message Pagination {
    int64 limit = 1;
    int64 offset = 2;
    int64 count = 3;
}

message GetBusinessServiceOrdersByEmailRequest {
    string email = 1;
    Pagination pagination = 2;
}

message GetBusinessServiceOrdersByEmailResponse{
    repeated BusinessServiceOrder businessServicesOrders = 1;
    Pagination pagination = 2;
}

service BusinessServiceOrders {
    rpc GetBusinessServiceOrder (GetBusinessServiceOrderRequest) returns (GetBusinessServiceOrderResponse) {}
    rpc GetBusinessServiceOrders (GetBusinessServiceOrdersRequest) returns (GetBusinessServiceOrdersResponse) {}
    rpc GetBusinessServiceOrderByDate(GetBusinessServiceOrderByDateRequest) returns (GetBusinessServiceOrderByDateResponse) {}
    rpc GetBusinessServiceOrdersByEmail (GetBusinessServiceOrdersByEmailRequest) returns (GetBusinessServiceOrdersByEmailResponse) {}

    rpc GetCompanyServiceInfoByWeekDay(GetCompanyServiceInfoByWeekDayRequest) returns (GetCompanyServiceInfoByWeekDayResponse) {}
    rpc GetCompanyAvailableHoursByDate(GetCompanyAvailableHoursByDateRequest) returns (GetCompanyAvailableHoursByDateResponse) {}

    rpc CreateBusinessServiceOrder (CreateBusinessServiceOrderRequest) returns (CreateBusinessServiceOrderResponse) {}
    rpc UpdateBusinessServiceOrder (UpdateBusinessServiceOrderRequest) returns (UpdateBusinessServiceOrderResponse) {}
    rpc DeleteBusinessServiceOrder (DeleteBusinessServiceOrderRequest) returns (DeleteBusinessServiceOrderResponse) {}

}
